tests/flow/declaration_files_haste_all/test.js
/**
 * Tests that .js.flow files are considered Flow files when `all` is set.
 */

import {foo} from './bar';

(foo: empty); // error: should be string
